<resources>
    <string name="app_name">Krafty Homes</string>
    <string name="seun_fagade">Seun Fagade</string>
    <string name="user_email">seun_fagade@decagon.dev</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="content">null</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="example">Example</string>
    <string name="email_address">Email address</string>
    <string name="google_icon_description">Google icon, sign in option</string>
    <string name="sign_out">Sign out</string>
    <string name="dashboard">Dashboard</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
</resources>