<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/blue_white_background"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/white"
        style="@style/FragmentNames"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_thumbs">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold|normal"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:background="@drawable/switch_tracks"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/pink_color"
                    android:textStyle="bold|normal"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="24dp"
                android:gravity="center"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email or Username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_TI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textEmailAddress"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_TI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/forgot_password_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:textSize="11sp"
                    android:textAlignment="textEnd"
                    android:textStyle="normal"
                    android:textColor="#616161"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@color/white"
                android:padding="24dp"
                android:gravity="center"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email or Username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_sign_up_TI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textEmailAddress"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_sign_up_TI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_TI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/Button5"
                android:backgroundTint="@color/pink_color"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textColor="#474646"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="18dp"
                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/facebook_icon"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:id="@+id/google_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/google_icon"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/google_icon_description" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/twitter_icon"
                    android:layout_margin="10dp"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>